--- a/src/presentation/styles/antd.scss
+++ b/src/presentation/styles/antd.scss
@@ -11,13 +11,23 @@
 
 // Upload
 .customSizedUpload {
-  .ant-upload {
-    width: 80px !important;
-    height: 80px !important;
+  .ant-upload-list {
+    display: grid !important;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .ant-upload.ant-upload-select {
+    width: 106px !important;
+    height: 100px !important;
+    background: white !important;
+    border: 2px dashed #9a83e6 !important;
+    border-radius: 12px !important;
+    order: 0 !important;
   }
   .ant-upload-list-item-container {
-    width: 80px !important;
-    height: 80px !important;
+    order: 1 !important;
+    width: 106px !important;
+    height: 100px !important;
     .ant-upload-list-item {
       padding: 0 !important;
       display: flex;
@@ -59,19 +69,21 @@
 // Radio
 .custom-radio {
   .ant-radio-wrapper {
+    width: 100%;
     margin-inline-end: 0;
   }
   .ant-radio-label {
+    padding-right: 0 !important;
     flex: 1 1 0%;
   }
 
   .ant-radio-checked {
     .ant-radio-inner {
       background-color: white;
-      border-color: #dbdfe3;
+      border-color: #70c89a;
     }
     .ant-radio-inner:after {
-      background-color: #8ee2ff;
+      background-color: #70c89a;
       width: 10px;
       height: 10px;
       transform: translate(3px, 3px);
@@ -91,6 +103,8 @@
         justify-content: center;
         padding-bottom: 8px;
         padding-top: 8px;
+        padding-left: 10px;
+        padding-right: 10px;
       }
     }
   }
